--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -12,8 +12,8 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 35%;
-    height: 35%;
+    width: 500px;
+    height: 500px;
 }
 
 #mainSignUpButtonContainer {
@@ -26,7 +26,7 @@
     font-size: 1.5rem;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 660px) {
     #mainTitle {
         font-size: 2rem;
         text-align: center;
@@ -41,9 +41,12 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 50%;
-        height: 50%;
+        width: 250px;
+        height: 250px;
     }
 
-
+    #mainSignUpButton {
+        border-radius: 25px;
+        font-size: 1rem;
+    }
 }
