--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -3,6 +3,11 @@
     text-align: center;
 }
 
+#subheader {
+    font-size: 2rem;
+    text-align: center;
+}
+
 #mainDescription {
     font-size: 1.5rem;
     text-align: center;
